# DeepSeek-Trade-Robot

./: .gitignore  README.md
ai-agent/: CONTRIBUTING.md  Cargo.toml
ai-agent/.github/workflows/: cd.yaml  ci.yaml
ai-agent/eye-core/: Cargo.toml  README.md
ai-agent/eye-core/examples/: agent.rs  agent_with_context.rs  agent_with_deepseek.rs  agent_with_galadriel.rs  agent_with_grok.rs  agent_with_hyperbolic.rs  agent_with_loaders.rs  agent_with_moonshot.rs  agent_with_ollama.rs  agent_with_tools.rs  anthropic_agent.rs  anthropic_streaming.rs  anthropic_streaming_with_tools.rs  calculator_chatbot.rs  chain.rs  cohere_connector.rs  debate.rs  extractor.rs  extractor_with_deepseek.rs  gemini_agent.rs  gemini_embeddings.rs  loaders.rs  multi_agent.rs  multi_extract.rs  perplexity_agent.rs  rag.rs  rag_dynamic_tools.rs  (+5 more)
ai-agent/eye-eternalai/: Cargo.toml  README.md
ai-agent/eye-lancedb/: Cargo.toml  README.md
ai-agent/eye-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
ai-agent/eye-lancedb/examples/fixtures/: lib.rs
ai-agent/eye-lancedb/src/: lib.rs
ai-agent/eye-lancedb/src/utils/: deserializer.rs  mod.rs
ai-agent/eye-lancedb/tests/: integration_tests.rs
ai-agent/eye-mongodb/: Cargo.toml  LICENSE  README.md
ai-agent/eye-neo4j/: Cargo.toml  README.md
ai-agent/eye-postgres/: Cargo.toml  README.md
ai-agent/eye-qdrant/: Cargo.toml  README.md
ai-agent/eye-sqlite/: Cargo.toml  README.md
golang/: go.mod  main.go
rust/: cargo.toml  main.rs
web/: package.json
web/app/: layout.tsx  page.tsx
(+59 files in other folders)
