[package]
name = "eye-lancedb"
version = "0.2.3"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "eye vector store index integration for LanceDB."
repository = "https://github.com/EyescreenerFun/DeepSeek-Trade-Robot"

[dependencies]
lancedb = "0.10.0"
eye-core = { path = "../eye-core", version = "0.7.0" }
arrow-array = "52.2.0"
serde_json = "1.0.128"
serde = "1.0.210"
futures = "0.3.30"

[dev-dependencies]
tokio = "1.40.0"
anyhow = "1.0.89"
httpmock = "0.7.0"

[[example]]
name = "vector_search_local_ann"
required-features = ["eye-core/derive"]

[[example]]
name = "vector_search_local_enn"
required-features = ["eye-core/derive"]

[[example]]
name = "vector_search_s3_ann"
required-features = ["eye-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["eye-core/derive"]
